--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="error">Error</string>
     <string name="warning">Warning</string>
     <string name="info">Info</string>
+    <string name="sound_notification">Sound on</string>
     <string name="custom">Custom</string>
 </resources>
